--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: bash
 os:
   - linux
   - osx
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y ksh zsh
+addons:
+  apt:
+    packages:
+      - ksh
+      - zsh
 script:
   - bash clitest dev/test.md
   - ksh  clitest dev/test.md
